# asic-creator

./: .gitmodules
2/: CMakeLists.txt  Doxyfile  Makefile  main.cpp
2/lib/tri-register/: CMakeLists.txt  tri-register-container.hpp  tri-register.cpp  tri-register.hpp
2/lib/tri-register/src/: trc-const-reference.cpp  trc-reference.cpp  trc-reg-chunk.cpp  trc.cpp  tri-register.cpp
2/lib/tristate/: CMakeLists.txt  tristate.cpp  tristate.hpp
2/tests/: test_tri_register.cpp  test_tri_register_container.cpp  test_tristate.cpp
3/: CMakeLists.txt  Doxyfile  Makefile
3/lib/: CMakeLists.txt
3/lib/asic-engine/: CMakeLists.txt
3/lib/asic-engine/include/asic-engine/: component-registry.hpp  exceptions.hpp  handler-device.hpp
3/lib/asic-engine/include/asic-engine/asic/: configs.hpp  loader.hpp  runner.hpp  util.hpp
3/lib/asic-engine/include/asic-engine/cpu/: base-instruction.hpp  generic-instruction.hpp  register-request-manager.hpp  register-request.hpp  register-set.hpp
3/lib/asic-engine/include/asic-engine/data-master/: bus-context.hpp  common.hpp  packet-queue.hpp  switch-context.hpp
3/lib/asic-engine/include/asic-engine/peripheral/: peripheral-context.hpp
3/lib/asic-engine/src/asic/: configs.cpp  loader.cpp  runner.cpp  util.cpp
3/lib/asic-engine/src/cpu/: base-instruction.cpp  generic-instruction.cpp  register-request-manager.cpp  register-request.cpp  register-set.cpp
3/lib/asic-engine/src/cpu/registries/: instruction-registry.cpp
3/lib/asic-engine/src/data-master/: switch-context.cpp
3/lib/asic-runner/: CMakeLists.txt
3/lib/asic-runner/include/asic-runner/: loader.hpp  runner.hpp
3/lib/asic-runner/src/: configs.cpp  loader.cpp  runner.cpp  util.cpp
3/lib/logger/: CMakeLists.txt
3/lib/logger/include/logger/: logger.hpp
3/lib/logger/src/: logger.cpp
3/lib/mod-loader/: CMakeLists.txt
3/lib/mod-loader/include/mod-loader/: dl-loader.hpp  library-manger.hpp  module-interface.hpp  module-manager.hpp  module-settings.hpp
3/lib/mod-loader/src/: dl-loader.cpp  library-manager.cpp  module-manager.cpp
3/lib/modules/: CMakeLists.txt  module-build.cmake
3/lib/modules/common/: CMakeLists.txt
3/lib/modules/common/include/modules-common/: data-master-port.hpp  device-gate.hpp  factory.hpp  interconect-packet.hpp  oops-data.hpp  packet-data.hpp  packet-receiver.hpp  packet-sender.hpp  registers.hpp  riscv-functor.hpp  stream-uart.hpp
3/lib/modules/common/src/modules-common/: device-gate.cpp  interconnect-packet.cpp  packet-receiver.cpp  packet-sender.cpp  stream-uart.cpp
3/lib/modules/modules/asynk-executor-device/: CMakeLists.txt  asynk-executor-device-v1.0.0.cpp
3/lib/modules/modules/asynk-executor-device/src/: asynk-executor-device.cpp
3/lib/modules/modules/cpu-gate-anypkt/: CMakeLists.txt  cpu-gate-anypkt-v1.0.0.cpp
3/lib/modules/modules/cpu-gate-anypkt/src/: cpu-gate-anypkt.cpp
3/lib/modules/modules/default-control-device/: CMakeLists.txt  default-control-device-v1.0.0.cpp
3/lib/modules/modules/default-control-device/include/: default-control-device.hpp
3/lib/modules/modules/default-control-device/src/: default-control-device.cpp
3/lib/modules/modules/default-device-anypkt-ipkt/: CMakeLists.txt  default-device-anypkt-ipkt-v1.0.0.cpp
3/lib/modules/modules/device-gate-anypkt/: CMakeLists.txt  device-gate-anypkt-1.0.0.cpp
3/lib/modules/modules/filetcm/: CMakeLists.txt  filetcm-1.0.0.cpp
3/lib/modules/modules/fileuart/: CMakeLists.txt  fileuart-0.0.1.cpp
3/lib/modules/modules/port-rw1248i-ipkt/: CMakeLists.txt  port-rw1248i-ipkt-v1.0.0.cpp
3/lib/modules/modules/registers-x32/: CMakeLists.txt  registers-x32-1.0.0.cpp
3/lib/modules/modules/riscv-branch-functor-x32/: CMakeLists.txt  riscv-branch-functor-x32-1.0.0.cpp
3/lib/modules/modules/riscv-form-b/: CMakeLists.txt  risc-v-form-b-1.0.0.cpp
3/lib/modules/modules/riscv-form-i/: CMakeLists.txt  risc-v-form-i-1.0.0.cpp
3/lib/modules/modules/riscv-form-j/: CMakeLists.txt  risc-v-form-j-1.0.0.cpp
3/lib/modules/modules/riscv-form-r/: CMakeLists.txt  risc-v-form-r-1.0.0.cpp
3/lib/modules/modules/riscv-form-s/: CMakeLists.txt  risc-v-form-s-1.0.0.cpp
3/lib/modules/modules/riscv-form-u/: CMakeLists.txt  risc-v-form-u-1.0.0.cpp
3/lib/modules/modules/riscv-imm-add-functor-x32/: CMakeLists.txt  riscv-imm-add-functor-x32-1.0.0.cpp
3/lib/modules/modules/riscv-jalr-functor-x32/: CMakeLists.txt  riscv-jalr-functor-x32-1.0.0.cpp
3/lib/modules/modules/riscv-jump-functor-x32/: CMakeLists.txt  riscv-jump-functor-x32-1.0.0.cpp
3/lib/modules/modules/riscv-load-functor-x32/: CMakeLists.txt  riscv-load-functor-x32-1.0.0.cpp
3/lib/modules/modules/riscv-lui-auipc-functor-x32/: CMakeLists.txt  riscv-lui-auipc-functor-x32-1.0.0.cpp
3/lib/modules/modules/riscv-reg-add-functor-x32/: CMakeLists.txt  riscv-reg-add-functor-x32-1.0.0.cpp
3/lib/modules/modules/riscv-store-functor-x32/: CMakeLists.txt  riscv-store-functor-x32-1.0.0.cpp
3/lib/modules/modules/stdiouart/: CMakeLists.txt  stdiouart-1.0.0.cpp
3/lib/modules/modules/switch-anypkt/: CMakeLists.txt  switch-anypkt-v1.0.0.cpp
3/lib/modules/modules/synk-executor-device/: CMakeLists.txt  synk-executor-device-v1.0.0.cpp
3/lib/thread-safe-containers/: concurent-queue.hpp  queue.hpp  ring.hpp
3/prog/: asic.json  link-modules.sh  proc.cpp
3/prog/c_prog/: Makefile  main.c  main.ld
3/tests/: test_concurent_queue.cpp  test_cpu_base_instruction.cpp  test_cpu_control_device.cpp  test_cpu_data_master_port.cpp  test_cpu_default_executor_device.cpp  test_cpu_generic_instruction.cpp  test_cpu_instruction_registry.cpp  test_cpu_register_request.cpp  test_cpu_register_request_manager.cpp  test_cpu_registers_set.cpp  test_dm_cpu_gate.cpp  test_dm_default_device.cpp  test_dm_device_gate.cpp  test_dm_interconnect_packet.cpp  test_dm_packet_queue.cpp  test_dm_packet_receiver.cpp  test_dm_packet_sender.cpp  test_dm_switch.cpp  test_dm_switch_context.cpp  test_master_bus.cpp  test_ring.cpp
3/tests/lib/: container-test-helpers.hpp  test-instruction-form.hpp  test-instruction-functor.hpp  test-packet-data.hpp  test-register-block.hpp
(+72 files in other folders)
